--- a/netlify.toml
+++ b/netlify.toml
@@ -1,10 +1,10 @@
 [build]
   publish = "out"
-  command = "npm run build"
+  command = "npm cache clean --force && npm install && npm run build"
 
 [build.environment]
   NODE_VERSION = "18"
-  NPM_FLAGS = "--prefix=/dev/null"
+  NODE_MODULES_CACHE = "false"
 
 [[redirects]]
   from = "/api/*"
