🔧 Fix Netlify Node.js Version & Mainnet Configuration
- Update Node.js version from 18 to 20.18.0 in netlify.toml
- Add .nvmrc file with Node 20.18.0 for consistent deployment
- Add engines field to package.json requiring Node >=20.18.0
- Update CSP headers to allow mainnet-beta.solana.com connections
- Fix Solana dependency compatibility issues for production deployment

--- a/package.json
+++ b/package.json
@@ -32,6 +32,9 @@
     "redis": "^5.8.2",
     "three": "^0.180.0"
   },
+  "engines": {
+    "node": ">=20.18.0"
+  },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
