🔧 Fix Prisma Netlify Deployment Issues
- Add debian-openssl-3.0.x binary target to schema.prisma for Netlify compatibility
- Add postinstall script to package.json to ensure Prisma generates on deployment
- Configure netlify.toml to include Prisma binaries in function bundle
- Update .gitignore to allow Prisma client binaries for deployment
- Regenerate Prisma client with correct binary targets

--- a/.gitignore
+++ b/.gitignore
@@ -45,6 +45,9 @@ next-env.d.ts
 /prisma/doom.db
 /prisma/doom.db-journal
 
+# Allow Prisma binaries for deployment
+!node_modules/.prisma/client/*
+
 # deployment info (contains sensitive keys)
 deployment-info.json
 
