--- a/netlify.toml
+++ b/netlify.toml
@@ -19,6 +19,7 @@
 [functions]
   directory = "netlify/functions"
   node_bundler = "esbuild"
+  included_files = ["node_modules/.prisma/**"]
 
 [[headers]]
   for = "/*"
