🔧 Fix Netlify Next.js Deployment Configuration
- Remove static export configuration (out directory)
- Add @netlify/plugin-nextjs for proper Next.js runtime support
- Configure Netlify to handle server-side rendering and API routes
- Remove manual redirects as Next.js runtime handles routing
- Keep Prisma binary inclusion for database functionality
- Build successfully generates both static and dynamic routes

--- a/netlify.toml
+++ b/netlify.toml
@@ -1,24 +1,15 @@
 [build]
-  publish = "out"
   command = "npm cache clean --force && npm install && npm run build"
 
 [build.environment]
   NODE_VERSION = "20.18.0"
   NODE_MODULES_CACHE = "false"
 
-[[redirects]]
-  from = "/api/*"
-  to = "/.netlify/functions/:splat"
-  status = 200
-
-[[redirects]]
-  from = "/*"
-  to = "/index.html"
-  status = 200
+# Use Netlify's Next.js runtime
+[[plugins]]
+  package = "@netlify/plugin-nextjs"
 
 [functions]
-  directory = "netlify/functions"
-  node_bundler = "esbuild"
   included_files = ["node_modules/.prisma/**"]
 
 [[headers]]
