--- a/package.json
+++ b/package.json
@@ -21,12 +21,14 @@
     "@solana/wallet-adapter-react-ui": "^0.9.39",
     "@solana/wallet-adapter-wallets": "^0.19.37",
     "@solana/web3.js": "^1.98.4",
+    "@types/pg": "^8.15.5",
     "@types/three": "^0.180.0",
     "borsh": "^2.0.0",
     "bs58": "^6.0.0",
     "crypto-js": "^4.2.0",
     "framer-motion": "^12.23.13",
     "next": "15.5.3",
+    "pg": "^8.16.3",
     "prisma": "^6.16.2",
     "react": "19.1.0",
     "react-dom": "19.1.0",
