--- a/netlify.toml
+++ b/netlify.toml
@@ -1,5 +1,5 @@
 [build]
-  command = "npm cache clean --force && npm install && npm run build"
+  command = "npm cache clean --force && npm install && npx prisma generate && npm run build"
 
 [build.environment]
   NODE_VERSION = "20.18.0"
