🔧 Configure Netlify Functions directory and dependencies
- Specify netlify/functions as the functions directory
- Include prisma files in function deployments
- Enable proper serverless function deployment for database operations

--- a/netlify.toml
+++ b/netlify.toml
@@ -10,7 +10,8 @@
   package = "@netlify/plugin-nextjs"
 
 [functions]
-  included_files = ["node_modules/.prisma/**"]
+  directory = "netlify/functions"
+  included_files = ["node_modules/.prisma/**", "prisma/**"]
 
 [[headers]]
   for = "/*"
