--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "@metaplex-foundation/js": "^0.20.1",
     "@metaplex-foundation/mpl-token-metadata": "^3.4.0",
     "@netlify/neon": "^0.1.0",
+    "@orca-so/sdk": "^1.2.26",
     "@prisma/client": "^6.16.2",
+    "@raydium-io/raydium-sdk": "^1.3.1-beta.58",
     "@solana/spl-token": "^0.4.14",
     "@solana/spl-token-metadata": "^0.1.6",
     "@solana/wallet-adapter-base": "^0.9.27",
@@ -27,6 +29,7 @@
     "borsh": "^2.0.0",
     "bs58": "^6.0.0",
     "crypto-js": "^4.2.0",
+    "decimal.js": "^10.6.0",
     "framer-motion": "^12.23.13",
     "next": "15.5.3",
     "pg": "^8.16.3",
